--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -254,7 +254,7 @@
     <ClInclude Include="..\Public\EffectFireBall.h" />
     <ClInclude Include="..\Public\EffectFly.h" />
     <ClInclude Include="..\Public\EffectFlyLaser.h" />
-    <ClInclude Include="..\Public\EffectGrab.h" />
+    <ClInclude Include="..\Public\ItemDropEffect.h" />
     <ClInclude Include="..\Public\EffectMagic.h" />
     <ClInclude Include="..\Public\EffectMagicAf.h" />
     <ClInclude Include="..\Public\EffectMeteoFire.h" />
@@ -411,7 +411,7 @@
     <ClCompile Include="..\Private\EffectFlash.cpp" />
     <ClCompile Include="..\Private\EffectFly.cpp" />
     <ClCompile Include="..\Private\EffectFlyLaser.cpp" />
-    <ClCompile Include="..\Private\EffectGrab.cpp" />
+    <ClCompile Include="..\Private\ItemDropEffect.cpp" />
     <ClCompile Include="..\Private\EffectMagic.cpp" />
     <ClCompile Include="..\Private\EffectMagicAf.cpp" />
     <ClCompile Include="..\Private\EffectMeteoExpolFire.cpp" />
