--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -59,7 +59,7 @@ GameObjects:
     HasCollider: false
     RenderGroup: 1
     FrustumRange: 100
-  - Name: DarkKinght
+  - Name: O_DarkKinght
     UUID: 8617912300921592626
     Active: true
     Layer: Default
@@ -121,84 +121,6 @@ GameObjects:
       Gold: 10
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_Phase2
-    UUID: 13799061387310565508
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [-4.36292219, -7.94019616e-06, -10]
-      Rotation: [-179.999893, -0, -179.999893]
-      Scale: [7.9998765, 0.400999486, 7.9998765]
-    Com_Decal:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_aura_001_TEX_KJS.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_GstarMagicCircle_001_Tex_PYS.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: true
-      FadeOutDuration: 8
-      FadeOutStratTime: 2
-      FadeIn: true
-      FadeInDuration: 2
-      FadeInStratTime: 0
-      EffectDuration: 10
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.347826004, 0, 1, 1]
-    Children:
-      - 15570142538041314338
-  - Name: E_Ursa_SoilDust
-    UUID: 5305419133825331868
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 17
-    BillBord: true
-    Com_Transform:
-      Translation: [1.41224837, 0.540380895, 0.14303574]
-      Rotation: [11.3099318, -0, 0]
-      Scale: [0.16369164, 0.408916384, 0.278309792]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Mask\DustSprite.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\DustSprite.dds
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 4
-      SpriteNumY: 8
-      SpriteTotal: 32
-      SpriteSpeed: 50
-      OffsetColor: [0.369565189, 0.286546916, 0.286546916, -0.25999999]
   - Name: BoxCol
     UUID: 17455003932267700337
     Active: true
@@ -226,7 +148,7 @@ GameObjects:
         CharacterController: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: Skull
+  - Name: O_Skull
     UUID: 7420576480574651297
     Active: true
     Layer: Default
@@ -281,211 +203,3 @@ GameObjects:
       Gold: 100
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_Phase2Inst
-    UUID: 205108304507836699
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [0.200000003, 0.550000012, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_RectInstance:
-      Shape: 0
-      InstNum: 100
-      Color: [0.268427789, 0, 0.449270606, 0]
-      Speed: 5
-      LifeTime: 1
-      Size: 0.5
-      StartRadian: -90
-      RadiationAngle: 180
-      LerpColor: true
-      SrcColor: [0.60869503, 0, 1, 0]
-      DestColor: [0.0982985422, 0, 0.173913062, 0]
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Trun_FX_Trail02_Tex_HKJ.jpg
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [1, 1, 1, 0]
-  - Name: E_Phase2Aura
-    UUID: 15570142538041314338
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0.0500000007, 0]
-      Rotation: [0, -0, 0]
-      Scale: [2.5, 4, 2.5]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: TwistCYL.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\FX_aura_001_TEX_KJS.dds
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Sphere_Ring_Gray_002_TEX_HKB.tga
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire_003_TEX_CJH_tile.tga
-      TextureNormalPath: ""
-      ScrollSpeedX: [0.300000012, 0.699999988, 0]
-      ScrollSpeedY: [0.300000012, 0.699999988, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 10
-      DistortionBias: 0.400000006
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: true
-      FadeInDuration: 5
-      FadeInStratTime: 0
-      EffectDuration: 50
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.491492987, 0, 0.565217376, 0.150000006]
-  - Name: E_Phase2Twist
-    UUID: 8166158456807153502
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [-0.889394343, 0.550000012, -0.318540484]
-      Rotation: [0, -16.2989979, 0]
-      Scale: [0.499995917, 0.499999762, 0.499995917]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: TwistMesh3.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\FX_aura_001_TEX_KJS.dds
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Impact_001_TEX_KKJ.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AEAura_001_TEX_PHS.tga
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [0.699999988, 0.800000012, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 5.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.4710145, 0.0682629794, 0.435992837, -0.0500000007]
-    Children:
-      - 16938390492324315338
-  - Name: Empty Object
-    UUID: 16938390492324315338
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: true
-    Com_Transform:
-      Translation: [0, 0.300000012, 0]
-      Rotation: [0, -0, 0]
-      Scale: [0.899999976, 2, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\FX_aura_001_TEX_KJS.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Circle_mask01.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AuraTile_001_TEX_KKJ1.png
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [0.699999988, 0.899999976, 0]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.231363475, 0.00945179351, 0.434782624, -0.479999989]
-  - Name: FireWall
-    UUID: 13960472319751028935
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 1
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 2.05100012, -3]
-      Rotation: [0, -0, 0]
-      Scale: [12.1999998, 7.30000019, 1]
-    Com_VIBuffer:
-      {}
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\AEWave2.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Trail_Clamp_002_TEX_PHS.tga
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_fire_003_TEX_CJH_tile.tga
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [0.100000001, 0.200000003, 2.29999995]
-      Distortion1: [0.100000001, -0.300000012]
-      Distortion2: [0.100000001, 0.200000003]
-      Distortion3: [0.100000001, -1.5]
-      DistortionScale: 0
-      DistortionBias: 0.100000001
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0.155009404, 0, 0.297101438, 0.629999995]
