--- a/Assets/Scenes/Cameras.yaml
+++ b/Assets/Scenes/Cameras.yaml
@@ -40,3 +40,45 @@ GameObjects:
     DestPosition: [0.159999996, 1, -2.5999999]
     SrcLookPosition: [0, 0, 0]
     DestLookPosition: [0, 0.600000024, -5]
+  - Name: 02UsraCamera
+    UUID: 468078313653918437
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Camera
+    Com_Transform:
+      Translation: [0.991658866, 1, -2.93327093]
+      Rotation: [180, -18.8737812, 180]
+      Scale: [0.999601662, 0.999857426, 0.999890983]
+    IsWait: true
+    IsBack: false
+    MoveTime: 1.5
+    WaitTime: 2
+    Movie: 0
+    NextIdx: 0
+    Slerp: false
+    SrcPosition: [-1, 1, 5]
+    DestPosition: [0, 0.5, -3]
+    SrcLookPosition: [0, 0, 0]
+    DestLookPosition: [0, 0.5, -4]
+  - Name: 03Camera
+    UUID: 2052010604692308703
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Camera
+    Com_Transform:
+      Translation: [0, 1.99169612, 29.9169617]
+      Rotation: [21.3968258, -0, 0]
+      Scale: [0.999998808, 0.999981344, 0.999999523]
+    IsWait: true
+    IsBack: false
+    MoveTime: 2
+    WaitTime: 2.5
+    Movie: 0
+    NextIdx: 0
+    Slerp: true
+    SrcPosition: [0, 1, 20]
+    DestPosition: [0, 2, 30]
+    SrcLookPosition: [0, 0, 0]
+    DestLookPosition: [0, 0, 35]
